--- a/gallery/index.html
+++ b/gallery/index.html
@@ -884,8 +884,8 @@
 
             <div data-aos="flip-up" data-aos-delay="40" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="91.png">
-                  <img src="91.png">
+                <a class="lightbox" href="91.jpg">
+                  <img src="91.jpg">
                 </a>
 
               </div>
