--- a/gallery/index.html
+++ b/gallery/index.html
@@ -903,8 +903,8 @@
 
             <div data-aos="flip-up" data-aos-delay="80" class="col-sm-6 col-md-4">
               <div class="thumbnail">
-                <a class="lightbox" href="93.png">
-                  <img src="93.png">
+                <a class="lightbox" href="93.jpg">
+                  <img src="93.jpg">
                 </a>
               </div>
             </div>
